@@ -1,3 +1,11 @@
+2015-12-02  Mark Wielaard  <mjw@redhat.com>
+
+	* Makefile.am (valgrind_cmd): Use --leak-check=full.
+	* run-backtrace-demangle.sh: Disable valgrind.
+	* run-stack-demangled-test.sh: Likewise.
+	* run-stack-d-test.sh: Likewise.
+	* run-stack-i-test.sh: Likewise.
+
 2015-12-01  Mark Wielaard  <mjw@redhat.com>
 
 	* test-flag-nobits.c (main): Call elf_end.
